--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
     </dependencies>
 
     <build>
-        <finalName>jrmmba-web36java</finalName>
+        <finalName>secured-restaurants</finalName>
 
         <plugins>
             <plugin>
